tools:gtlssh-keygen: Add docs on common names for server certs
I found out, the hard way, that if you have two certificate with the
same common name, they appear to be considered in the same certificate
chain by openssl 3.0.  Add a note on this to avoid the issue in the
future.

Signed-off-by: Corey Minyard <cmimyard@mvista.com>

--- a/tools/gtlssh-keygen.1
+++ b/tools/gtlssh-keygen.1
@@ -167,6 +167,18 @@ password to store in your .gtlssh directory.
 Create keys for the server, generally in /etc/gtlssh/gtlsshd.key and
 /etc/gtlssh/gtlsshd.crt.  You generally must be root to do this.  Use
 for initial setup of gtlsshd.
+
+.B NOTE:
+If you run multiple servers on the same system, you must have a
+different common name for each one.  Some version of openssl will look
+at another certificate with the same common name as part of the same
+certificate chain and you will get a failure:
+
+  authority and subject key identifier mismatch
+
+So if, for instance, you are running ser2net and gtlsshd on the same
+system, they must have different common names.
+
 .SH "SEE ALSO"
 gtlssh(1), gtlsshd(8)
 .SH "KNOWN PROBLEMS"
