man: Put serialoptions under it's own heading
So it's easier to spot.

Signed-off-by: Corey Minyard <minyard@acm.org>

--- a/man/gensio.5
+++ b/man/gensio.5
@@ -671,7 +671,7 @@ accepted, use -1 instead.
 Set the device to write only.  Default is false.
 .B rdonly[=true|false]
 Set the device to read only.  Default is false.
-.PP
+.SS Serialoptions
 There are a plethora of serialoptions, available as defaults:
 .TP
 .B [speed=]<speed><parity><databits><stopbits>
