--- a/man/gensio.5
+++ b/man/gensio.5
@@ -642,6 +642,8 @@ termios work on (except for wronly).
 
 This is, no surprise, a serial gensio.
 
+You can also use "sdev" instead of "serialdev" for shorthand.
+
 One problem with serialdev and UUCP locking is that if you fork() a
 process while one is open, the forked process will have the serialdev
 but the value in the UUCP lockfile will be incorrect.  There's not
