Fix typo Loggin => Logging in gensio_event.3
Signed-off-by: Corey Minyard <minyard@acm.org>

--- a/man/gensio_event.3
+++ b/man/gensio_event.3
@@ -261,7 +261,7 @@ When parsing a gensio string, this will be called if the gensio
 detects an error in the initial parsing or initial configuration.
 This is called only during the allocation (
 .B str_to_gensio()
-or equivalent).  Loggin this information will make it easier for users
+or equivalent).  Logging this information will make it easier for users
 to find out what's wrong with their gensio strings.
 
 The
