mdns: Add a ignore-v6-link-local option
It causes problems for access to the local system, this is mostly there
so it can be used in the tests so they can work locally.

Signed-off-by: Corey Minyard <minyard@acm.org>

--- a/man/gensio.5
+++ b/man/gensio.5
@@ -1698,6 +1698,10 @@ By default the mdns gensio will attempt to use the "gensiostack" text
 string from the mDNS service.  If you don't want it to do this,
 setting this option will turn it off.
 .TP
+.B ignore-v6-link-local[=true|false]
+Ignore IPv6 link local addresses, ones starting with "fe80:".  They
+cause problems on some systems.
+.TP
 .B mdnstimeout=<gtime>
 Set the amount of time to wait for mdns to find the item.  See the
 "gtime" section for more info on how to set the time.  The default
